--- a/app/design/adminhtml/default/default/template/page/header.phtml
+++ b/app/design/adminhtml/default/default/template/page/header.phtml
@@ -17,7 +17,7 @@
 	</a>
     <div class="header-right">
         <ul id="usermenu">
-        	<li onmouseover="Element.addClassName(this,'over')" onmouseout="Element.removeClassName(this,'over')" class="parent level0 usermenulabel">
+        	<li onmouseover="this.classList.add('over')" onmouseout="this.classList.remove('over')" class="parent level0 usermenulabel">
         		<a href="#" onclick="return false" title="<?= $this->__('User Menu') ?>">
                     <svg version="1.1" id="burger" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="40px" height="40px" viewBox="0 0 40 40" enable-background="new 0 0 40 40" xml:space="preserve">
                         <rect opacity="0.25" fill="#FFFFFF" width="40" height="40"></rect>
