--- a/app/design/adminhtml/default/default/template/widget/grid/serializer.phtml
+++ b/app/design/adminhtml/default/default/template/widget/grid/serializer.phtml
@@ -5,7 +5,7 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2025 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
@@ -15,22 +15,25 @@
 <?php $formId = $this->getFormId()?>
 <?php if (!empty($formId)) :?>
 <script type="text/javascript">
-    Event.observe(window, "load", function(){
-        var serializeInput  = document.createElement('input');
+    document.addEventListener('DOMContentLoaded', function() {
+        const serializeInput = document.createElement('input');
         serializeInput.type = 'hidden';
         serializeInput.name = '<?= $this->getInputElementName() ?>';
-        serializeInput.id   = '<?= $_id ?>';
+        serializeInput.id = '<?= $_id ?>';
         try {
             document.getElementById('<?= $formId ?>').appendChild(serializeInput);
-            new serializerController('<?= $_id?>', <?= $this->getDataAsJSON() ?>, <?= $this->getColumnInputNames(true) ?>, <?= $this->getGridBlock()->getJsObjectName() ?>, '<?= $this->getReloadParamName() ?>');
+            new SerializerController('<?= $_id?>', <?= $this->getDataAsJSON() ?>, <?= $this->getColumnInputNames(true) ?>, <?= $this->getGridBlock()->getJsObjectName() ?>, '<?= $this->getReloadParamName() ?>');
         } catch(e) {
-            //Error add serializer
+            // Error add serializer
+            console.error('Failed to initialize serializer:', e);
         }
     });
 </script>
 <?php else: ?>
 <input type="hidden" name="<?= $this->getInputElementName() ?>"  value="" id="<?= $_id ?>" />
 <script type="text/javascript">
-    new serializerController('<?= $_id?>', <?= $this->getDataAsJSON() ?>, <?= $this->getColumnInputNames(true) ?>, <?= $this->getGridBlock()->getJsObjectName() ?>, '<?= $this->getReloadParamName() ?>');
+    document.addEventListener('DOMContentLoaded', function() {
+        new SerializerController('<?= $_id?>', <?= $this->getDataAsJSON() ?>, <?= $this->getColumnInputNames(true) ?>, <?= $this->getGridBlock()->getJsObjectName() ?>, '<?= $this->getReloadParamName() ?>');
+    });
 </script>
 <?php endif ?>
