--- a/app/design/adminhtml/default/default/template/api/role_users_grid_js.phtml
+++ b/app/design/adminhtml/default/default/template/api/role_users_grid_js.phtml
@@ -12,81 +12,104 @@
 /** @var Mage_Adminhtml_Block_Api_Role_Grid_User $this */
 ?>
 <script type="text/javascript">
-<!--
 <?php $myBlock = $this->getLayout()->getBlock('roleUsersGrid'); ?>
 <?php if( is_object($myBlock) && $myBlock->getJsObjectName() ): ?>
-    var checkBoxes = $H({});
-    var warning = false;
-    var inRoleUsers = $H(<?= $myBlock->_getUsers(true) ?>);
-    if (inRoleUsers.size() > 0) warning = true;
-    $('in_role_user').value = inRoleUsers.toQueryString();
-
-    function registerUserRole(grid, element, checked){
-        if(checked){
-            inRoleUsers.set(element.value, 0);
-        } else {
-            inRoleUsers.unset(element.value);
-        }
-        $('in_role_user').value = inRoleUsers.toQueryString();
-        grid.reloadParams = {'in_role_user[]':inRoleUsers.keys()};
+    const checkBoxes = new Map();
+    let warning = false;
+    const inRoleUsers = new Map(Object.entries(<?= $myBlock->_getUsers(true) ?>));
+    if (inRoleUsers.size > 0) warning = true;
+    const roleUserInput = document.getElementById('in_role_user');
+    if (roleUserInput) {
+        roleUserInput.value = new URLSearchParams(inRoleUsers).toString();
     }
 
-    function roleUsersRowClick(grid, event){
-        var trElement = Event.findElement(event, 'tr');
-        var isInput   = Event.element(event).tagName == 'INPUT';
-        if(trElement){
-            var checkbox = Element.getElementsBySelector(trElement, 'input');
-            if(checkbox[0]){
-                var checked = isInput ? checkbox[0].checked : !checkbox[0].checked;
-                if (warning && checkBoxes.size() > 0) {
-                    if ( !confirm("<?= $this->jsQuoteEscape($this->__('Warning!\r\nThis action will remove this user from already assigned role\r\nAre you sure?')) ?>") ) {
-                        checkbox[0].checked = false;
-                        checkBoxes.each(function(elem) {
-                            if (elem.value.status == 1) {
-                                elem.value.object.checked = true;
+    function registerUserRole(grid, element, checked) {
+        if (checked) {
+            inRoleUsers.set(element.value, 0);
+        } else {
+            inRoleUsers.delete(element.value);
+        }
+        const roleUserInput = document.getElementById('in_role_user');
+        if (roleUserInput) {
+            roleUserInput.value = new URLSearchParams(inRoleUsers).toString();
+        }
+        grid.reloadParams = {'in_role_user[]': Array.from(inRoleUsers.keys())};
+    }
+
+    function roleUsersRowClick(grid, event) {
+        const trElement = event.target.closest('tr');
+        const isInput = event.target.tagName === 'INPUT';
+        if (trElement) {
+            const checkbox = trElement.querySelector('input');
+            if (checkbox) {
+                const checked = isInput ? checkbox.checked : !checkbox.checked;
+                if (warning && checkBoxes.size > 0) {
+                    if (!confirm("<?= $this->jsQuoteEscape($this->__('Warning!\r\nThis action will remove this user from already assigned role\r\nAre you sure?')) ?>")) {
+                        checkbox.checked = false;
+                        for (const [key, value] of checkBoxes) {
+                            if (value.status === 1) {
+                                value.object.checked = true;
                             }
-                        });
+                        }
                         return false;
                     }
                     warning = false;
                 }
-                <?= $myBlock->getJsObjectName() ?>.setCheckboxChecked(checkbox[0], checked);
+                const gridObject = <?= $myBlock->getJsObjectName() ?>;
+                if (gridObject && gridObject.setCheckboxChecked) {
+                    gridObject.setCheckboxChecked(checkbox, checked);
+                }
             }
         }
     }
 
-    function roleUsersRowInit(grid, row){
-        var checkbox = $(row).getElementsByClassName('checkbox')[0];
+    function roleUsersRowInit(grid, row) {
+        const rowElement = typeof row === 'string' ? document.getElementById(row) : row;
+        const checkbox = rowElement ? rowElement.getElementsByClassName('checkbox')[0] : null;
         if (checkbox) {
-            checkBoxes.set(checkbox.value, {'status' : ((checkbox.checked) ? 1 : 0), 'object' : checkbox});
+            checkBoxes.set(checkbox.value, {'status': checkbox.checked ? 1 : 0, 'object': checkbox});
         }
     }
 
-    function myhandler(obj)
-    {
-        if (checkBoxes.size() > 0) {
-            if ( !confirm("<?= $this->jsQuoteEscape($this->__('Warning!\r\nThis action will remove those users from already assigned roles\r\nAre you sure?')) ?>") ) {
+    function myhandler(obj) {
+        if (checkBoxes.size > 0) {
+            if (!confirm("<?= $this->jsQuoteEscape($this->__('Warning!\r\nThis action will remove those users from already assigned roles\r\nAre you sure?')) ?>")) {
                 obj.checked = false;
-                checkBoxes.each(function(elem) {
-                    if (elem.value.status == 1) {
-                        elem.value.object.checked = true;
+                for (const [key, value] of checkBoxes) {
+                    if (value.status === 1) {
+                        value.object.checked = true;
                     }
-                });
+                }
                 return false;
             }
             warning = false;
         }
-        checkBoxes.each(function(elem) {
-            <?= $myBlock->getJsObjectName() ?>.setCheckboxChecked(elem.value.object, obj.checked);
-        });
+        const gridObject = <?= $myBlock->getJsObjectName() ?>;
+        if (gridObject && gridObject.setCheckboxChecked) {
+            for (const [key, value] of checkBoxes) {
+                gridObject.setCheckboxChecked(value.object, obj.checked);
+            }
+        }
     }
 
-<?= $myBlock->getJsObjectName() ?>.rowClickCallback = roleUsersRowClick;
-<?= $myBlock->getJsObjectName() ?>.initRowCallback = roleUsersRowInit;
-<?= $myBlock->getJsObjectName() ?>.checkboxCheckCallback = registerUserRole;
-<?= $myBlock->getJsObjectName() ?>.checkCheckboxes = myhandler;
-<?= $myBlock->getJsObjectName() ?>.rows.each(function(row){roleUsersRowInit(<?= $myBlock->getJsObjectName() ?>, row)});
-    $('in_role_user_old').value = $('in_role_user').value;
+    const gridObject = <?= $myBlock->getJsObjectName() ?>;
+    if (gridObject) {
+        gridObject.rowClickCallback = roleUsersRowClick;
+        gridObject.initRowCallback = roleUsersRowInit;
+        gridObject.checkboxCheckCallback = registerUserRole;
+        gridObject.checkCheckboxes = myhandler;
+
+        if (gridObject.rows) {
+            gridObject.rows.forEach(row => {
+                roleUsersRowInit(gridObject, row);
+            });
+        }
+    }
+
+    const roleUserOldInput = document.getElementById('in_role_user_old');
+    const roleUserInput = document.getElementById('in_role_user');
+    if (roleUserOldInput && roleUserInput) {
+        roleUserOldInput.value = roleUserInput.value;
+    }
 <?php endif ?>
-//-->
 </script>
