--- a/app/design/adminhtml/default/default/template/giftmessage/form.phtml
+++ b/app/design/adminhtml/default/default/template/giftmessage/form.phtml
@@ -5,7 +5,7 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2025 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
@@ -30,15 +30,23 @@
 <br /><?= $this->getCloseButtonHtml() ?>
 <?php endif ?>
 <script type="text/javascript">
-<!--
 <?php if(!$this->getSaveMode()): ?>
-    var giftMessageWindowObject = new GiftMessageWindow('<?= $this->getUniqueId() ?>','message-form', '<?= $this->getRemoveUrl() ?>');
-    giftMessageWindowObject.confirmMessage = '<?= $this->getEscapedForJs(Mage::helper('giftmessage')->__('Are you sure?')) ?>';
+    document.addEventListener('DOMContentLoaded', () => {
+        if (typeof GiftMessageWindow !== 'undefined') {
+            window.giftMessageWindowObject = new GiftMessageWindow('<?= $this->getUniqueId() ?>','message-form', '<?= $this->getRemoveUrl() ?>');
+            window.giftMessageWindowObject.confirmMessage = '<?= $this->getEscapedForJs(Mage::helper('giftmessage')->__('Are you sure?')) ?>';
+        }
+    });
 <?php else: ?>
-    var giftMessageWindowObject = new GiftMessageWindow('<?= $this->getUniqueId() ?>', null, '<?= $this->getRemoveUrl() ?>');
-    Event.observe(window, 'load', function(evt) {
-        giftMessageWindowObject.updateParent('<?= $this->getEditUrl() ?>', '<?= $this->getButtonUrl() ?>');
+    document.addEventListener('DOMContentLoaded', () => {
+        if (typeof GiftMessageWindow !== 'undefined') {
+            window.giftMessageWindowObject = new GiftMessageWindow('<?= $this->getUniqueId() ?>', null, '<?= $this->getRemoveUrl() ?>');
+            window.addEventListener('load', () => {
+                if (window.giftMessageWindowObject) {
+                    window.giftMessageWindowObject.updateParent('<?= $this->getEditUrl() ?>', '<?= $this->getButtonUrl() ?>');
+                }
+            });
+        }
     });
 <?php endif ?>
-//-->
 </script>
