--- a/app/design/adminhtml/default/default/template/sales/order/creditmemo/create/totals/adjustments.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/creditmemo/create/totals/adjustments.phtml
@@ -35,36 +35,52 @@
         <td colspan="2"><div id="adjustment_negative_adv"></div></td>
     </tr>
     <script type="text/javascript">
-    //<![CDATA[
-    Validation.addAllThese([
-        ['not-negative-amount', '<?= $this->jsQuoteEscape($this->helper('sales')->__('Please enter positive number in this field.')) ?>', function(v) {
-            if(v.length)
-                return /^\s*\d+([,.]\d+)*\s*%?\s*$/.test(v);
-            else
-                return true;
-        }]
-    ]);
+        Validation.addAllThese([
+            ['not-negative-amount', '<?= $this->jsQuoteEscape($this->helper('sales')->__('Please enter positive number in this field.')) ?>', function(v) {
+                if (v.length) {
+                    return /^\s*\d+([,.]\d+)*\s*%?\s*$/.test(v);
+                } else {
+                    return true;
+                }
+            }]
+        ]);
 
-    if ($('shipping_amount')) {
-        $('shipping_amount').advaiceContainer = $('shipping_amount_adv');
+    const shippingAmount = document.getElementById('shipping_amount');
+    const adjustmentPositive = document.getElementById('adjustment_positive');
+    const adjustmentNegative = document.getElementById('adjustment_negative');
+
+    if (shippingAmount) {
+        const shippingAmountAdv = document.getElementById('shipping_amount_adv');
+        if (shippingAmountAdv) {
+            shippingAmount.adviceContainer = shippingAmountAdv;
+        }
         unblockSubmit('shipping_amount');
     }
-    if ($('adjustment_positive')) {
-        $('adjustment_positive').advaiceContainer = $('adjustment_positive_adv');
+    if (adjustmentPositive) {
+        const adjustmentPositiveAdv = document.getElementById('adjustment_positive_adv');
+        if (adjustmentPositiveAdv) {
+            adjustmentPositive.adviceContainer = adjustmentPositiveAdv;
+        }
         unblockSubmit('adjustment_positive');
     }
-    if ($('adjustment_negative')) {
-        $('adjustment_negative').advaiceContainer = $('adjustment_negative_adv');
+    if (adjustmentNegative) {
+        const adjustmentNegativeAdv = document.getElementById('adjustment_negative_adv');
+        if (adjustmentNegativeAdv) {
+            adjustmentNegative.adviceContainer = adjustmentNegativeAdv;
+        }
         unblockSubmit('adjustment_negative');
     }
 
     function unblockSubmit(id) {
-        $(id).observe('focus', function(event) {
-            if ($$('button[class="scalable update-button disabled"]').size() > 0) {
-                enableElements('submit-button');
-            }
-        });
+        const element = document.getElementById(id);
+        if (element) {
+            element.addEventListener('focus', function(event) {
+                const disabledUpdateButtons = document.querySelectorAll('button.scalable.update-button.disabled');
+                if (disabledUpdateButtons.length > 0) {
+                    enableElements('submit-button');
+                }
+            });
+        }
     }
-    //]]>
     </script>
 <?php endif ?>
